src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 34, 64, 89;
  --background-start-rgb: 244, 250, 255;
  --background-end-rgb: 244, 250, 255;
  --menu-background-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 177, 196, 216;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
    --menu-background-rgb: 16, 23, 41;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

#menu-medium,
#menu-large {
  background: rgb(var(--menu-background-rgb));
}

